<resources>
    <string name="app_name">Burger World</string>
    <!-- Nav -->
    <string name="action_settings">Settings</string>
    <string name="nav_title">I\'m a burger</string>
    <string name="nav_text">¡Taste me!</string>
    <string name="nav_home">Home</string>
    <string name="nav_calc">Calculator</string>
    <string name="nav_game">Game</string>
    <string name="nav_music">Music player</string>
    <string name="nav_ranking4x4">Ranking 4x4</string>
    <string name="nav_ranking6x6">Ranking 6x6</string>
    <string name="nav_logOff">Log OFF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--Calc-->
    <string name="errorPuntos">Syntax error, more than one point in a number</string>
    <!--Juego-->
    <string name="victory_text">Victory</string>
    <string name="btn_game_ok"> Accept </string>
    <string name="txt_intents_title">Turns</string>
    <string name="txt_nick_title">Nickname</string>
    <string name="btn_4x4">4 x 4</string>
    <string name="btn_6x6">6 x 6</string>
    <string name="title_lvl_select">Select lvl</string>
    <string name="close">Close</string>


</resources>
