<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/activity_calc"
            android:title="@string/nav_calc" />
        <item
            android:id="@+id/game"
            android:title="@string/nav_game" />
        <item
            android:id="@+id/ranking"
            android:title="@string/nav_ranking4x4" />
        <item
            android:id="@+id/ranking6x6"
            android:title="@string/nav_ranking6x6" />
        <item
            android:id="@+id/musicPlayer"
            android:title="@string/nav_music" />
        <item
            android:id="@+id/logoff"
            android:title="@string/nav_logOff" />
    </group>
</menu>