<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorDialog">
    <TextView
        android:id="@+id/title_lvl_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_lvl_select"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lvl_dialog_text"
        android:gravity="center"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btn_4x4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_lvl_select"
        android:background="@color/colorBtn"
        android:text="@string/btn_4x4"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lvl_dialog_text"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/btn_6x6"
        android:layout_below="@id/btn_4x4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBtn"
        android:text="@string/btn_6x6"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lvl_dialog_text"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/dialog_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_6x6"
        android:background="@color/colorBtn"
        android:text="@string/close"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lvl_dialog_text"
        android:layout_margin="10dp"/>
</RelativeLayout>